src/test/ui/lifetime-errors/ex2b-push-no-existing-names.stderr
error[E0308]: mismatched types
  --> $DIR/ex2b-push-no-existing-names.rs:16:12
   |
16 |     x.push(y);
   |            ^ lifetime mismatch
   |
   = note: expected type `Ref<'_, _>`
              found type `Ref<'_, _>`
note: the anonymous lifetime #3 defined on the function body at 15:1...
  --> $DIR/ex2b-push-no-existing-names.rs:15:1
   |
15 | / fn foo(x: &mut Vec<Ref<i32>>, y: Ref<i32>) {
16 | |     x.push(y);
17 | | }
   | |_^
note: ...does not necessarily outlive the anonymous lifetime #2 defined on the function body at 15:1
  --> $DIR/ex2b-push-no-existing-names.rs:15:1
   |
15 | / fn foo(x: &mut Vec<Ref<i32>>, y: Ref<i32>) {
16 | |     x.push(y);
17 | | }
   | |_^

error: aborting due to previous error(s)

